[gd_scene load_steps=3 format=3 uid="uid://ds8hb370t0d72"]

[ext_resource type="Script" path="res://scripts/MainMenuManager.gd" id="1_cldox"]

[sub_resource type="LabelSettings" id="LabelSettings_erero"]
font_size = 48
outline_size = 6
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.498039)
shadow_offset = Vector2(3, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cldox")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.498039, 0.498039, 0.498039)

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMenu" type="Control" parent="Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menus/TitleMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Cat Combat"
label_settings = SubResource("LabelSettings_erero")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="ColorRect" parent="Menus/TitleMenu/Title"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.498039)

[node name="Content" type="VBoxContainer" parent="Menus/TitleMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_top = 150.0
offset_right = -375.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Username" type="LineEdit" parent="Menus/TitleMenu/Content"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1
max_length = 12

[node name="Play" type="Button" parent="Menus/TitleMenu/Content"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="Menus/TitleMenu/Content"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Menus/TitleMenu/Content"]
layout_mode = 2
text = "Quit"

[node name="PlayMenu" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menus/PlayMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Play"
label_settings = SubResource("LabelSettings_erero")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="ColorRect" parent="Menus/PlayMenu/Title"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.498039)

[node name="Content" type="VBoxContainer" parent="Menus/PlayMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_top = 150.0
offset_right = -375.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="IPAddress" type="LineEdit" parent="Menus/PlayMenu/Content"]
layout_mode = 2
placeholder_text = "Server Address"
alignment = 1

[node name="JoinGame" type="Button" parent="Menus/PlayMenu/Content"]
layout_mode = 2
text = "Join Game"

[node name="HostGame" type="Button" parent="Menus/PlayMenu/Content"]
layout_mode = 2
text = "Host Game
"

[node name="Back" type="Button" parent="Menus/PlayMenu/Content"]
layout_mode = 2
text = "Back"

[node name="SettingsMenu" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menus/SettingsMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Play"
label_settings = SubResource("LabelSettings_erero")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="ColorRect" parent="Menus/SettingsMenu/Title"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.498039)

[node name="Content" type="VBoxContainer" parent="Menus/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_top = 150.0
offset_right = -375.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Menus/SettingsMenu/Content"]
layout_mode = 2
text = "Back"

[connection signal="text_changed" from="Menus/TitleMenu/Content/Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="Menus/TitleMenu/Content/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menus/TitleMenu/Content/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menus/TitleMenu/Content/Quit" to="." method="_on_quit_pressed"]
[connection signal="text_changed" from="Menus/PlayMenu/Content/IPAddress" to="." method="_on_ip_address_text_changed"]
[connection signal="pressed" from="Menus/PlayMenu/Content/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="Menus/PlayMenu/Content/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="Menus/PlayMenu/Content/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Menus/SettingsMenu/Content/Back" to="." method="_on_back_pressed"]
